--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,28 @@
     <string name="sstadiums">Стадионы</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="settings">Настройки</string>
+    <string name="main">Основное</string>
+    <string name="news">Новости</string>
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="notifications">Уведомления</string>
+    <string name="theme_app">Персонализация</string>
+    <string name="sett_noti">Настройки уведомлений</string>
+    <string name="noti_on">Уведомления выключены</string>
+    <string name="noti_off">Уведомления включены</string>
+    <string name="black_theme">Черная тема</string>
+    <string name="sett_theme">Настройки темы</string>
 </resources>
